refactor: content updates

--- a/games/invest_game/templates/question2.html
+++ b/games/invest_game/templates/question2.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
 
     <p>
-      <b>Generally speaking, would you say that most people can be trusted or
+      <b>Generally speaking, would you say that most people can be trusted, or
         that you can’t be too careful in dealing with people?</b>
     </p>
     <div class="radio">
@@ -38,7 +38,7 @@
       </label>
     </div>
 
-    <p><b>Which do you think are your main source of news? (check all that apply)</b></p>
+    <p><b>Where do you get most of your news? (check all that apply)</b></p>
     <div class="checkbox">
       <label>
         <input type="checkbox" id="news_source" name="news_source" value="abc_nbc_cbs" />
@@ -94,17 +94,17 @@
       </label>
     </div>
 
-    <p><b>Are your political views generally closer to...</b></p>
+    <p><b>Are your political views generally closer to those of</b></p>
     <div class="radio">
       <label>
         <input type="radio" name="political_views" value="democrats" />
-        The Democrats
+        The Democratic Party
       </label>
     </div>
     <div class="radio">
       <label>
         <input type="radio" name="political_views" value="republicans" />
-        The Republicans
+        The Republican Party
       </label>
     </div>
     <div class="radio">
