--- a/games/invest_game/templates/question2.html
+++ b/games/invest_game/templates/question2.html
@@ -205,7 +205,13 @@
           political_views: political_views,
           us_citizen: us_citizen
         }),
-      });
+      }).done(function(data) {
+        if (data.redirect_location === "question2_5") {
+          window.location.href = {% url "invest_game:question2-5" %}
+        } else {
+          window.location.href = {% url "invest_game:question3" %}
+        }
+      })
     } 
   });
 </script>
