--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -14,7 +14,7 @@
   </h3>
   <div class="step_by_step" style="display:none">
     <h3>
-      Your have been matched with 
+      You have been matched with 
       <strong class="responder-name"></strong>.
     </h3>
     <h3>Here’s how the game works:</h3>
