--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -7,41 +7,40 @@
 {% block leftcontent %}
 <div id="LeftContentContainer">
   <h3 id="intro-title">
-    Let’s first find out who your Responder is. 
+    Let’s first find out whom you're playing with. 
   </h3>
   <h3 style="color:red;">
     Click on one of the icons on the right.
   </h3>
   <div class="step_by_step" style="display:none">
     <h3>
-      Your Responder’s name is
+      You have been matched with 
       <strong class="responder-name"></strong>.
     </h3>
     <h3>Here’s how the game works:</h3>
     <ul>
       <li>
         <h4>
-          Each of you – the Investor and <span class="responder-name"></span> –
-          will be given $5.
+          You and <span class="responder-name"></span> start with $5 each.
         </h4>
       </li>
       <li>
         <h4>
-          As the Investor, you will then have the opportunity to pass some, all
+          You then have the opportunity to pass some, all,
           or none of your $5 to <span class="responder-name"></span>, as you
           like.
         </h4>
       </li>
       <li>
         <h4>
-          Then we will triple the amount you give and pass it to
+          We will triple the amount you give and pass it to
           <span class="responder-name"></span>.
         </h4>
       </li>
       <li>
         <h4>
-          After that, <span class="responder-name"></span> will give some of the
-          money they have at that point to you.
+          You will then discover whether <span class="responder-name"></span> has
+          chosen to give some of the money they have at that point to you.
         </h4>
       </li>
       <li>
