--- a/games/invest_game/templates/question3.html
+++ b/games/invest_game/templates/question3.html
@@ -25,7 +25,7 @@
     <div class="radio">
       <label>
         <input type="radio" name="approve_of_trump" value="dont_know" />
-        Dont' know
+        Don't know
       </label>
     </div>
     <div class="radio">
