--- a/games/invest_game/templates/question4.html
+++ b/games/invest_game/templates/question4.html
@@ -8,6 +8,7 @@
 <div id="questionnaire_si2">
   <form id="questionform" class="questionnaire-content">
     {% csrf_token %}
+    <h4 class="questionnaire-header">The following questions elicit your responses in light of the COVID-19 pandemic:</h4>
 
     <div id="questions">
       <div class="random">
