--- a/games/invest_game/templates/select_respondent.html
+++ b/games/invest_game/templates/select_respondent.html
@@ -10,7 +10,7 @@
     Let’s first find out whom you're playing with. 
   </h3>
   <h3 style="color:red;">
-    Click on one of the icons on the right.
+    Click on one of the icons on the right!
   </h3>
   <div class="step_by_step" style="display:none">
     <h3>
@@ -45,7 +45,7 @@
       </li>
       <li>
         <h4>OK, let’s play. 
-          <span style="color:red;">Click "Next" to continue.</span>
+          <span style="color:red;">Click "Next" to continue!</span>
         </h4>
       </li>
     </ul>
