--- a/games/invest_game/templates/user_investment.html
+++ b/games/invest_game/templates/user_investment.html
@@ -40,7 +40,7 @@
       You now have $5. How much you would like to pass to {{respondent}}? 
     </h3>
     <h3 style="color:red;">
-      Please use the slider at the right to make a decision.
+      Please use the slider at the right to make a decision!
     </h3>
   </div>
 </div>
